tests/golden/defaults/appcat/appcat/cnpg/11_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: cnpg
  name: allow-webhook-all-namespaces
  namespace: syn-cnpg-system
spec:
  ingress:
    - ports:
        - port: 9443
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  policyTypes:
    - Ingress
